# ICFPC-2012-Hackaton

./: .gitignore  README.md
Icfpc2012Solver/: .project  Icfpc2012Solver.cabal  Paths_Icfpc2012Solver.hs
Icfpc2012Solver/Data/Mazes/: 001.sol  001.txt
Icfpc2012Solver/Data/TestData/: 2Lifts.txt  2Robots.txt  NoRobot.txt  OneLine.txt  TwoLines.txt  TwoNonPaddedLines.txt
Icfpc2012Solver/Data/TestData/Emulator/: MoveLeftClosedLift.txt  MoveLeftEarth.txt  MoveLeftEarth_expected.txt  MoveLeftFreely.txt  MoveLeftFreely_expected.txt  MoveLeftLambda.txt  MoveLeftLambda_expected.txt  MoveLeftMovableRock.txt  MoveLeftMovableRock_expected.txt  MoveLeftRock_expected.txt  MoveLeftWall.txt
Icfpc2012Solver/Data/TestData/Parser/: NoLift.txt  TwoNonPaddedLines_expected.txt
Icfpc2012Solver/src/: Common.hs  Main.hs
Icfpc2012Solver/src/Frontend/: Common.hs  LambdaLifter.hs  MapEditor.hs
Icfpc2012Solver/src/Frontend/Common/: UI.hs
Icfpc2012Solver/src/Graphics/Gloss/: UI.hs
Icfpc2012Solver/src/LabyrinthParser/: Parser.hs  Validator.hs
Icfpc2012Solver/src/Runtime/: Emulator.hs  PrettyPrint.hs  Types.hs
Icfpc2012Solver/src/Testing/: EmulatorTest.hs  ParserTest.hs
Player/: index.js  package.json  test.txt
